Fix responsive layout issues with main image and center section alignment, add website screenshot

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
     flex: 1;
     font-size: 24px;
     font-weight: bold;
-    margin-left: 190px;
+    margin-left: 50px;
     
 }
 
@@ -61,9 +61,9 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex: 1;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    flex-wrap: wrap;
+    padding: 100px 50px;
+    gap: 20px;
     
 }
 
@@ -75,8 +75,8 @@ a {
     align-items: flex-start;
     flex: 1;
     margin-right: auto;
-    margin-left: 200px;
-    max-width: 380px;
+   min-width: 300px;
+   max-width: 500px;
 }
 
 button {
@@ -92,6 +92,14 @@ button {
     flex: 1;
     justify-content: center;
     margin: auto;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.main-image img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 
@@ -118,14 +126,13 @@ button {
 .small-pics {
     display: flex;
     flex-wrap: wrap;
-    flex: 1;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-left: 100px;
-    padding-right: 100pxs;
+    padding: 0px 100px;
     gap: 80px;
-    margin-bottom: 0px;
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
 .small-pics img {
